--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ build/
 
 ### VS Code ###
 .vscode/
+# Ignore Firebase configuration file
+src/main/resources/static/FireBaseJson/datn-teehaven.json
