quan li khachhang

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,12 +26,18 @@ spring.thymeleaf.servlet.cache=false
 spring.thymeleaf.servlet.mode=HTML
 spring.thymeleaf.servlet.encoding=UTF-8
 spring.thymeleaf.servlet.check-template-location=true
-
-
-# Static Resources
 spring.web.resources.static-locations=classpath:/static/
 
-app.firebase.config.path=src/main/resources/static/FireBaseJson/datn-teehaven.json
+# Static Resources
+app.firebase.config.path=src/main/resources/static/FileBaseJson/datn-teehaven.json
 app.firebase.bucket.name=datn-teehaven.appspot.com
 spring.servlet.multipart.max-file-size=1GB
 spring.servlet.multipart.max-request-size=1GB
+
+#Mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=bachdung004@gmail.com
+spring.mail.password=ojjqkxqqcirioeml
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
