--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,7 +43,5 @@ spring.mail.password=ojjqkxqqcirioeml
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-# Trong application.properties
-logging.level.root=INFO
-logging.level.com.example.datn_teehaven=DEBUG
-logging.file.name=logs/application.log
+spring.devtools.restart.enabled=false
+
