--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,3 +45,10 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.devtools.restart.enabled=false
 
+# VNPay Configuration
+vnp.payUrl=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+vnp.returnUrl=http://localhost:8080/vnpay-payment
+vnp.tmnCode=G5TCSXGB
+vnp.secretKey=UKAMKZ26L3FVBYZWMO368LNB52TU03OV
+vnp.version=2.1.0
+
